--- a/indexx.html
+++ b/indexx.html
@@ -17,6 +17,6 @@
             </p> -->
         </div>
     </div>
-<script src="script.js"></script> 
+<script src="scriptt.js"></script> 
 </body>
 </html>
